<resources>
    <string name="serverUrl">http://localhost:8080/</string>
    <string name="app_name">AndroidDisigin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_topic">Topic</string>
    <string name="menu_tag">Tags</string>

    <string name="home_second">Home Second</string>
    <string name="prompt_email">E-mail</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Password must be >8 character</string>
    <string name="prompt_password">Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_login">Login</string>
    <string name="register_button">Register</string>
    <string name="log_in_button">Log in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="menu_account">Account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="title">Заголовок</string>

</resources>
