<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account2"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_account" />
<item
    android:id="@+id/nav_account"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/menu_account"
    />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/chat"
            android:title="@string/menu_topic" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/tag1"
            android:title="@string/menu_tag" />

    </group>
</menu>
