<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    <fragment-->
<!--        android:id="@+id/nav_account"-->
<!--        android:name="com.example.forumdisigin.ui.account.AccountF"-->
<!--        android:label="@string/menu_account"-->
<!--        tools:layout="@layout/fragment_account"-->
<!--        >-->
<!---->
<!--    </fragment>-->

<activity
    android:id="@+id/nav_account2"
    android:name="com.example.forumdisigin.ui.account.Account"
    android:label="@string/menu_account"
    tools:layout="@layout/fragment_account"
    />

<fragment android:id="@+id/nav_account"
    android:name="com.example.forumdisigin.ui.account.AccountFragment"
    android:label="jojo"
    tools:layout="@layout/fragment_account">

</fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.forumdisigin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.forumdisigin.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_topic"
        android:name="com.example.forumdisigin.ui.topic.TopicFragment"
        android:label="@string/menu_topic"
        tools:layout="@layout/fragment_topic" />

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.example.forumdisigin.ui.tags.TagFragment"
        android:label="@string/menu_tag"
        tools:layout="@layout/fragment_tag" />
</navigation>